Fix default projects page image on Safari

--- a/css/head.scss
+++ b/css/head.scss
@@ -447,30 +447,17 @@ img.emoji {
   display: flex;
   flex-direction: column;
 
-  &__thumbnail {
-    display: block;
-    width: 100%;
-    height: auto;
+  &__thumbnail-placeholder {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     min-height: 200px;
     margin-bottom: 20px;
-    position: relative;
 
-    border: 0;
     border-radius: 2px;
 
-    &:before {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: absolute;
-      z-index: 2;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-
-      border-radius: 2px;
-
+    &--no-image {
       background-color: $shiny-blue;
 
       font-family: 'Cabin', sans-serif;
@@ -481,8 +468,20 @@ img.emoji {
       text-transform: uppercase;
       text-align: center;
 
-      content: attr(alt);
+      .project__thumbnail {
+        display: none;
+      }
     }
+  }
+
+  &__thumbnail {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    min-height: 200px;
   }
 
   &__created-at {
